# autopuf

./: .gitignore  AGENTS.md  README.md  RUNBOOK.md  TASKS.md  TASK_TEMPLATE.md  WORKFLOWS.md  pyproject.toml
candidates/: README.md  baseline-classical-crp-001.yaml  baseline-optical-auth-001.yaml  regression-crp-limited-crp-001.yaml  regression-modeling-vulnerable-crp-001.yaml  regression-trust-limited-remote-auth-001.yaml
configs/heuristics/: attacks.yaml
configs/scoring/: default.yaml
configs/worlds/: README.md  lab-clean-v1.yaml  phone-reader-indoor-v1.yaml  regression-modeling-clean-v1.yaml  regression-query-pressure-v1.yaml  regression-untrusted-remote-auth-v1.yaml
formal/: Autopuf.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean
ops/templates/: task.yaml  (+3 more)
suites/: regression-crp-limited.yaml  regression-known-boundaries.yaml  regression-modeling-vulnerable.yaml  regression-trust-limited-remote-auth.yaml  template-attack-analysis.yaml  template-regression-run.yaml  template-short-optimization.yaml  template-smoke-evaluate.yaml  v1-auth-search.yaml
tests/: import_smoke.py  test_adversarial_evaluator.py  test_attack_cli.py  test_attacks.py  test_baselines.py  test_candidate_registry.py  test_cli_smoke.py  test_config.py  test_constraints_scoring.py  test_evaluate_cli.py  test_formal_bridge.py  test_frontier.py  test_honest_evaluator.py  test_mutations.py  test_ops_cli.py  test_optimize_cli.py  test_regression_suites.py  test_schema.py  test_storage.py  test_suite_templates.py  test_test_utils.py  test_types.py  test_world_registry.py  utils.py
(+135 files in other folders)
